asignacion de nuevos titulos y modificacion de pagina principal

--- a/index.html
+++ b/index.html
@@ -46,10 +46,8 @@
                 <nav>
                     <ul class="header__cont-nav">
                         <li class="header__nav"><a class="nav-link active" aria-current="page" href="./index.html">INICIO</a></li>
-                        <li class="header__nav"><a href="./contenido/accommodation.html">ALOJAMIENTO</a></li>
-                        <li class="header__nav"><a href="./contenido/packages.html">PAQUETES</a></li>
-                        <li class="header__nav"><a href="./contenido/activities.html">ACTIVIDADES</a></li>
-                        <li class="header__nav"><a href="./contenido/assists.html">ASISTENCIAS</a></li>
+                        <li class="header__nav"><a href="./contenido/national.html">NACIONALES</a></li>
+                        <li class="header__nav"><a href="./contenido/international.html">INTERNACIONALES</a></li>
                     </ul>
                 </nav>
             </div>
@@ -57,7 +55,7 @@
     </div>
 
     <div class="parrafo_carrito">
-        <h3>Una vez seleccionado el paquete deseado, puedes ver la reserva en la bolsa de compras.</h3>
+        <h3>¡Destinos más visitados!</h3>
     </div>
 
     <!-- contenido de mi page-->
