cambios en los estilos de la pag principal mejor oarganizacion visual

--- a/index.html
+++ b/index.html
@@ -51,20 +51,18 @@
                     </ul>
                 </nav>
             </div>
-        </header>
+            <div class="parrafo_carrito">
+                <h3>¡Destinos más visitados!</h3>
+            </div>
+        </header>   
     </div>
-
-    <div class="parrafo_carrito">
-        <h3>¡Destinos más visitados!</h3>
-    </div>
-
-    <!-- contenido de mi page-->
-
-    <div id="contenido" class="main__contenido"></div>
-
-    <!-- contenido del modal-->
-
-    <div id="modalContainer" class="header__modal-container"></div>
+        <main>
+            <!-- contenido de mi page-->
+            <div id="contenido" class="main__contenido"></div>
+        
+            <!-- contenido del modal-->        
+            <div id="modalContainer" class="header__modal-container"></div>
+        </main>
 
 
     <script src="script.js"></script>
