--- a/contenido/national.html
+++ b/contenido/national.html
@@ -56,7 +56,7 @@
             </div>
         </header></div>
         <main>
-            <div id="internacionalfilter" class=""></div>
+            <div id="nacionalfilter" class="main__contenido"></div>
 
         </main>
         <footer>
@@ -65,6 +65,7 @@
 
 
     <script src="../array.js"></script>
+    <script src="../script.js"></script>
     <script src="../scriptnacional.js"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
