--- a/contenido/international.html
+++ b/contenido/international.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@800&display=swap" rel="stylesheet">
-    <title>Inicio</title>
+    <title>Destinos Internacionales</title>
 </head>
 <body>
     <div class="main__backgroun">
