--- a/pages/index.html
+++ b/pages/index.html
@@ -13,10 +13,6 @@
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Nanum+Myeongjo:wght@800&display=swap"
-      rel="stylesheet"
-    />
     <title>Inicio</title>
   </head>
   <body>
@@ -94,8 +90,14 @@
     </header>
 
     <main class="container">
-      <div class="parrafo_carrito">
+      <div class="initial-description">
         <h3>¡Destinos más visitados!</h3>
+        <p>
+          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio iure
+          molestias, excepturi magnam perferendis fugit ad, architecto est quia
+          minus doloremque explicabo tempora nisi? Unde velit nesciunt
+          repudiandae vitae animi.
+        </p>
       </div>
       <!-- contenido de mi page-->
       <div id="contenido" class="main__content row"></div>
