--- a/pages/index.html
+++ b/pages/index.html
@@ -89,7 +89,7 @@
       </nav>
     </header>
 
-    <main class="container">
+    <main class="container pb-5">
       <div class="initial-description">
         <h3>¡Destinos más visitados!</h3>
         <p>
@@ -127,7 +127,40 @@
         </div>
       </div>
     </main>
-    <footer>footer</footer>
+    <footer class="bg-dark text-white">
+      <div class="container py-5">
+        <div class="row">
+          <div class="col-sm-12 col-md-4">
+            <a href="./index.html">
+              <img
+                class="footer-logo"
+                src="/public/assets/img/logo6.png"
+                alt="logo"
+              />
+            </a>
+            <p class="mt-3 mb-0">travel agency</p>
+            <p class="mb-0">+1 (xxx) xxx-xxxx</p>
+            <p>travel@agency.com</p>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <ul class="">
+              <li>Lorem ipsum dolor sit amet</li>
+              <li>Lorem ipsum dolor sit amet</li>
+              <li>Lorem ipsum dolor sit amet</li>
+              <li>Lorem ipsum dolor sit amet</li>
+            </ul>
+          </div>
+          <div class="col-sm-12 col-md-4">
+            <ul>
+              <li>Lorem ipsum dolor sit amet</li>
+              <li>Lorem ipsum dolor sit amet</li>
+              <li>Lorem ipsum dolor sit amet</li>
+              <li>Lorem ipsum dolor sit amet</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
 
     <script src="../js/data/destinations.js"></script>
     <script src="../js/main.js"></script>
