--- a/pages/index.html
+++ b/pages/index.html
@@ -99,10 +99,10 @@
           repudiandae vitae animi.
         </p>
       </div>
-      <!-- contenido de mi page-->
+      <!-- mapping data -->
       <div id="contenido" class="main__content row"></div>
 
-      <!-- contenido del modal-->
+      <!-- modal -->
       <div id="modal" class="modal" tabindex="-1">
         <div
           class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-xl"
