--- a/contenido/international.html
+++ b/contenido/international.html
@@ -58,14 +58,12 @@
     </div>
 
             <main>
- <!-- contenido de mi page-->
+                <div id="nacionalfilter" class="main__contenido"></div> 
+                <div id="modalContainer" class="header__modal-container"></div>          
 
             </main>
 
-
-
-    <script src="../array.js"></script>
-    <script src="../scriptinternacional.js"></script>
+    <script src="../js/scriptinternacional.js"></script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </html>
